--- a/app/views/emails/edit.html.erb
+++ b/app/views/emails/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Email</h1>
+<div  class='pageHeader'><h2>Editing Email</h2></div>
 
 <%= render 'form', email: @email %>
 
-<%= link_to 'Show', @email %> |
-<%= link_to 'Back', emails_path %>
+<%= link_to 'Cancel', @email %>
