Remove 'conductor' from list of instruments you can opt into

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -38,7 +38,7 @@
         }
 
         $(document).on('ready', function() {
-          setInstrumentsForSelection('#emailMemberInstrumentSelector', next);
+          setInstrumentsForSelection('#emailMemberInstrumentSelector', next, true);
         });
       </script>
     <% end %>
