--- a/app/views/member_sets/new.html.erb
+++ b/app/views/member_sets/new.html.erb
@@ -1,6 +1,15 @@
 <div class='pageHeader'><h2>Opt-in to a Performance Set</h2></div>
 
-<div class="bigForm">
+<div class='bigFormOverlay' id='bigFormOverlay'>
+  Welcome to the opt-in page for the ensembles of SF Civic Music, including the San Francisco Civic Symphony, Mozart to Mendelssohn, Civic Strings, Summer Workshop, and Civic Pops.
+  <br /><br />
+  Have you played in any of our ensembles since Summer 2016?
+  <br /><br />
+  <a href='#' id='optInYes' class='optInAnswer'>Yes</a>
+  <a href='https://members.sfcivicsymphony.org/members/signup' class='optInAnswer'>No</a>
+</div>
+
+<div class="bigForm clearOut">
 <%= form_for(@member_set) do |f| %>
   <% if @member_set.errors.any? %>
     <div id="error_explanation">
