Update code of conduct web address

--- a/app/views/member_sets/new.html.erb
+++ b/app/views/member_sets/new.html.erb
@@ -53,7 +53,7 @@
       <br><br>
       <%= raw ps.opt_in_message %>
       <br><br>
-      By opting into this set, you are agreeing to abide by our <b><a href="https://sfcivicsymphony.org/code-of-conduct/">Code of Conduct</a></b> for all musicians.
+      By opting into this set, you are agreeing to abide by our <b><a href="https://sfcivicmusic.org/code-of-conduct/">Code of Conduct</a></b> for all musicians.
     </div>
   <% end %>
 
