Update reset password email some more

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,6 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password on the Civic Symphony Association's Membership Management System. </p>
+<p>Someone has requested a link to change your password on the SF Civic Music's Membership Management System. </p>
 
 <p>Please click on the link below to reset your password and access the system.</p>
 
