--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -616,6 +616,18 @@ div {
   text-decoration: underline;
 }
 
+.setBlock {
+  display: inline-block;
+  padding: 0 15px 15px 15px;
+  border: 1px solid gray;
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px rgba(0.3, 0.3, 0.3, 0.75);
+  margin-right: 10px;
+  max-width: 200px;
+  vertical-align: top;
+  margin-top: 5px;
+}
+
 #setMaster {
   margin: 0;
   padding: 0;
