Restore status to rosters and add padding

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
       <%= link_to "Absences", absences_path(set: ps.id) %><br>
       <%= link_to "Send Email", new_email_path(performance_set_id: ps.id) %>
     </div>
-  <% end %><br>
+  <% end %><br><br>
 
 
   <b>Members</b>
