--- a/app/views/performance_sets/_form.html.erb
+++ b/app/views/performance_sets/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(performance_set) do |f| %>
+<% return unless action_name == 'new' %>
+<%= form_for(setup_performance_set(performance_set)) do |f| %>
   <% if performance_set.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(performance_set.errors.count, "error") %> prohibited this performance_set from being saved:</h2>
@@ -33,6 +34,16 @@
   </div>
 
   <div class="field">
+    <%= f.label :opt_in_start_date, "Opt-In Start Date  (Format: YYYY-MM-DD)" %>
+    <%= date_field :performance_set, :opt_in_start_date %>
+  </div>
+
+  <div class="field">
+    <%= f.label :opt_in_end_date, "Opt-In End Date  (Format: YYYY-MM-DD)" %>
+    <%= date_field :performance_set, :opt_in_end_date %>
+  </div>
+
+  <div class="field">
     <%= f.label :description, "Set Short Description (used in title)" %>
     <%= f.text_field :description %>
   </div>
@@ -41,6 +52,47 @@
     <%= f.label :opt_in_message, "Opt-in message to display on website" %>
     <%= f.text_area :opt_in_message, cols: 50, rows: 5 %>
   </div>
+
+  <h3 class="formHeader">Rehearsal Dates</h3>
+  <%= f.fields_for :performance_set_dates do |psd_f| %>
+    <div class="field memberInfoBlock">
+      <div class="field">
+        <%= psd_f.label :date, "Rehearsal Date  (use date picker or in format YYYY-MM-DD)" %>
+        <%= date_field :performance_set_date, :date %>
+      </div>
+    </div>
+  <% end %>
+
+  <h3 class="formHeader">Instruments</h3>
+  <%= f.fields_for :performance_set_instruments do |psi_f| %>
+
+    <div class="field memberInfoBlock">
+      <div class="field inlineField">
+        <%= psi_f.label :instrument, "Instrument Name" %>
+        <%= psi_f.text_field :instrument %>
+      </div>
+
+      <div class="field inlineField">
+        <%= psi_f.label :limit, "Limit (0 for unlimited)" %>
+        <%= psi_f.text_field :limit %>
+      </div>
+
+      <div class="fiel inlineField">
+        <%= psi_f.label :available_to_opt_in, "Don't allow opt-ins on this instrument" %>
+        <%= psi_f.check_box :available_to_opt_in %>
+      </div>
+  <%#
+      <div class="field inlineField">
+        <%= psi_f.label :opt_in_message_type, "(leave blank)" %>
+        <%# psi_f.text_field :opt_in_message_type
+      </div> %>
+
+      <div class="field inlineField">
+        <%= psi_f.label :opt_in_message_id, "Which custom message id should be displayed after the user presses 'submit'?" %>
+        <%= psi_f.collection_select :opt_in_message_id, @opt_in_messages, :id, :message, { prompt: true } %>
+      </div>
+    </div>
+  <% end %>
 
   <div class="actions">
     <%= f.submit %>
