--- a/app/views/opt_in_messages/show.html.erb
+++ b/app/views/opt_in_messages/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Title:</strong>
+  <%= @opt_in_message.title %>
+</p>
+
+<p>
   <strong>Message:</strong>
   <%= @opt_in_message.message %>
 </p>
