--- a/app/views/opt_in_messages/index.html.erb
+++ b/app/views/opt_in_messages/index.html.erb
@@ -1,10 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Opt In Messages</h1>
+<div class='pageHeader'><h2>Opt In Messages</h2></div>
+
 
 <table>
   <thead>
     <tr>
+      <th>Title</th>
       <th>Message</th>
       <th colspan="3"></th>
     </tr>
@@ -13,6 +15,7 @@
   <tbody>
     <% @opt_in_messages.each do |opt_in_message| %>
       <tr>
+        <td><%= opt_in_message.title %></td>
         <td><%= opt_in_message.message %></td>
         <td><%= link_to 'Show', opt_in_message %></td>
         <td><%= link_to 'Edit', edit_opt_in_message_path(opt_in_message) %></td>
