--- a/app/views/performance_sets/new.html.erb
+++ b/app/views/performance_sets/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Performance Set</h1>
+<div class='pageHeader'><h2>Add New Performance Set</h2></div>
 
 <%= render 'form', performance_set: @performance_set %>
 
