--- a/app/views/performance_sets/show.html.erb
+++ b/app/views/performance_sets/show.html.erb
@@ -28,6 +28,20 @@
   <%= raw @performance_set.opt_in_message %>
 </p>
 
+<p>
+  <strong>Dates:</strong>
+  <% @performance_set.performance_set_dates.each do |psd| %>
+    <%= link_to psd.date, edit_performance_set_date_path(psd) %>
+  <% end %>
+</p>
+
+<p>
+  <strong>Instruments:</strong>
+  <% @performance_set.performance_set_instruments.each do |psi| %>
+    <%= link_to psi.instrument, edit_performance_set_instrument_path(psi) %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_performance_set_path(@performance_set) %>
 <br><br>
 <%= link_to 'View All Performance Sets', performance_sets_path %>
