Improvements in Performance Set / Date / Instrument editing

--- a/app/views/performance_set_dates/new.html.erb
+++ b/app/views/performance_set_dates/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Performance Set Date</h1>
+<div class='pageHeader'><h2>New Performance Set Date</h2></div>
 
 <%= render 'form', performance_set_date: @performance_set_date %>
 
-<%= link_to 'Back', performance_set_dates_path %>
+<%= link_to 'Cancel', performance_set_dates_path %>
