--- a/app/views/opt_in_messages/index.html.erb
+++ b/app/views/opt_in_messages/index.html.erb
@@ -6,8 +6,7 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Message</th>
+      <th>Title and Message</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,8 +14,8 @@
   <tbody>
     <% @opt_in_messages.each do |opt_in_message| %>
       <tr>
-        <td><%= opt_in_message.title %></td>
-        <td><%= opt_in_message.message %></td>
+        <td><b><%= opt_in_message.title %></b><br>
+        <%= opt_in_message.message %></td>
         <td><%= link_to 'Show', opt_in_message %></td>
         <td><%= link_to 'Edit', edit_opt_in_message_path(opt_in_message) %></td>
         <td><%= link_to 'Destroy', opt_in_message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
