--- a/app/views/performance_set_dates/edit.html.erb
+++ b/app/views/performance_set_dates/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Performance Set Date</h1>
+<div class='pageHeader'><h2>Editing Performance Set Date</h2></div>
 
 <%= render 'form', performance_set_date: @performance_set_date %>
 
 <%= link_to 'Show', @performance_set_date %> |
 <%= link_to 'Back', performance_set_dates_path %>
+
+<br><br>
+<%= link_to 'Delete Rehearsal Date', @performance_set_date, method: :delete, data: { confirm: 'Are you sure you want to delete this performance set date?' } %>
