--- a/app/views/performance_set_instruments/index.html.erb
+++ b/app/views/performance_set_instruments/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= link_to performance_set_instrument.performance_set, performance_set_instrument.performance_set %></td>
         <td><%= performance_set_instrument.instrument %></td>
-        <td><%= performance_set_instrument.limit ||= "none" %></td>
+        <td><%= performance_set_instrument.limit.present? && performance_set_instrument.limit > 0 ? performance_set_instrument.limit : "none" %></td>
         <td><%= link_to 'Show', performance_set_instrument %></td>
         <td><%= link_to 'Edit', edit_performance_set_instrument_path(performance_set_instrument) %></td>
         <td><%= link_to 'Destroy', performance_set_instrument, method: :delete, data: { confirm: 'Are you sure?' } %></td>
