--- a/app/views/performance_set_instruments/new.html.erb
+++ b/app/views/performance_set_instruments/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Performance Set Instrument</h1>
+<div class='pageHeader'><h2>New Performance Set Instrument</h2></div>
 
 <%= render 'form', performance_set_instrument: @performance_set_instrument %>
 
-<%= link_to 'Back', performance_set_instruments_path %>
+<%= link_to 'Cancel', performance_set_instruments_path %>
