--- a/app/views/performance_sets/_form.html.erb
+++ b/app/views/performance_sets/_form.html.erb
@@ -91,7 +91,7 @@
           <%= psi_f.text_field :limit, size: 5 %>
         </div>
 
-        <div class="fiel inlineField" style='padding-right: 15px; border-right: 1px solid black;'>
+        <div class="field inlineField" style='padding-right: 15px; border-right: 1px solid black;'>
           <%= psi_f.label :available_to_opt_in, "Don't allow opt-ins on this instrument" %>
           <%= psi_f.check_box :available_to_opt_in %>
         </div>
@@ -108,14 +108,14 @@
         <i>Click on an instrument to edit or delete it.</i><br />
         <% @performance_set.performance_set_instruments.each do |psi| %>
           <br />
-          <%= link_to psi.instrument, edit_performance_set_instrument_path(psi) %> ·
+          <%= link_to psi.instrument, edit_performance_set_instrument_path(psi), { target: "_new" } %> ·
           <%= psi.limit.present? ? "Limit #{psi.limit}" : "" %> ·
           <%= psi.available_to_opt_in ? "Opt-In Unavailable" : "Opt-In Available" %> ·
-          <%= psi.opt_in_message_id ? OptInMessage.find(psi.opt_in_message_id).title : "No Custom Message" %>
+          Message: <%= psi.opt_in_message_id ? link_to(OptInMessage.find(psi.opt_in_message_id).title, OptInMessage.find(psi.opt_in_message_id)).html_safe : "No Custom Message" %>
         <% end %>
         <br /><br />
       <% end %>
-      <i><%= link_to "Add new rehearsal instrument", new_performance_set_instrument_path %></i>
+      <i><%= link_to "Add new rehearsal instrument", new_performance_set_instrument_path, { target: "_new" } %></i>
     </div>
   <% end %>
 
