--- a/app/views/performance_set_instruments/_form.html.erb
+++ b/app/views/performance_set_instruments/_form.html.erb
@@ -20,6 +20,7 @@
     <%= f.label :instrument, "Instrument" %>
     <%= f.text_field :instrument %>
   </div>
+  <script>$(document).on('ready', function() { attachAC("#performance_set_instrument_instrument", true); });</script>
 
   <div class="field">
     <%= f.label :limit, "Limit (optional)" %>
