Restrict opt-in based on new fields. Update error messages.

--- a/app/views/performance_set_instruments/_form.html.erb
+++ b/app/views/performance_set_instruments/_form.html.erb
@@ -27,6 +27,7 @@
     <%= f.text_field :limit %>
   </div>
 
+  <%# THIS FIELD IS NAMED BACKWARDS  %>
   <div class="field">
     <%= f.label :available_to_opt_in, "Don't allow opt-ins on this instrument" %>
     <%= f.check_box :available_to_opt_in %>
