--- a/app/views/performance_sets/_form.html.erb
+++ b/app/views/performance_sets/_form.html.erb
@@ -93,6 +93,7 @@
           <%= psi_f.text_field :limit, size: 5 %>
         </div>
 
+        <%# THIS FIELD IS NAMED BACKWARDS %>
         <div class="field inlineField" style='padding-right: 15px; border-right: 1px solid black;'>
           <%= psi_f.label :available_to_opt_in, "Don't allow opt-ins on this instrument" %>
           <%= psi_f.check_box :available_to_opt_in %>
